crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_fib_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: fib.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn fib {
    parameters: [0]
    entry: 0

    0:
      %1 = 1 (u32)
      %2 = %0 U32LessEqual %1
      %3 = 0 (u32)
      %4 = 2 (u32)
      jump 2

    1:
      return %0

    2:
      %5 = %0 (u32)
      %6 = %3 (u32)
      %7 = %1 (u32)
      %8 = %3 (u32)
      %9 = %4 (u32)
      %10 = %9 U32Greater %5
      if %10 then jump 4 else jump 5

    3:
      jump 4

    4:
      %14 = 0 (u32)
      return %14

    5:
      %11 = %6 U32Add %7
      %12 = 1 (u32)
      %13 = %9 U32Add %12
      jump 2

    6:
      unreachable

  }

}
