crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_nested_loop_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
description: "WASM to MIR snapshot: nested_loop.wat"
---
WASM File: nested_loop.wat

Program:
nested_loop:
   0: 23 0 0 2             // u32([fp + 2], [fp + 3]) = u32(0)
   1: 19 2147483641 0 0 4  // u32([fp + 4], [fp + 5]) = u32([fp + -6], [fp + -5]) + u32(0, 0)
   2: 19 2 0 0 6           // u32([fp + 6], [fp + 7]) = u32([fp + 2], [fp + 3]) + u32(0, 0)
   3: 19 2 0 0 8           // u32([fp + 8], [fp + 9]) = u32([fp + 2], [fp + 3]) + u32(0, 0)
   4: 19 2 0 0 10          // u32([fp + 10], [fp + 11]) = u32([fp + 2], [fp + 3]) + u32(0, 0)
.loop_header_1:
   5: 28 6 4 16            // [fp + 16] = u32([fp + 6], [fp + 7]) U32Less u32([fp + 4], [fp + 5])
   6: 14 16 2 _            // if [fp + 16] != 0 jmp rel .fallthrough_4
   7: 13 37 _ _            // jump rel .L_3
.fallthrough_4:
   8: 23 0 0 18            // u32([fp + 18], [fp + 19]) = u32(0)
   9: 19 6 0 0 20          // u32([fp + 20], [fp + 21]) = u32([fp + 6], [fp + 7]) + u32(0, 0)
  10: 19 18 0 0 22         // u32([fp + 22], [fp + 23]) = u32([fp + 18], [fp + 19]) + u32(0, 0)
  11: 19 10 0 0 24         // u32([fp + 24], [fp + 25]) = u32([fp + 10], [fp + 11]) + u32(0, 0)
.loop_header_5:
  12: 28 22 20 26          // [fp + 26] = u32([fp + 22], [fp + 23]) U32Less u32([fp + 20], [fp + 21])
  13: 14 26 2 _            // if [fp + 26] != 0 jmp rel .fallthrough_7
  14: 13 11 _ _            // jump rel .L_6
.fallthrough_7:
  15: 15 24 20 28          // u32([fp + 28], [fp + 29]) = u32([fp + 24], [fp + 25]) U32Add u32([fp + 20], [fp + 21])
  16: 23 1 0 30            // u32([fp + 30], [fp + 31]) = u32(1)
  17: 15 22 30 32          // u32([fp + 32], [fp + 33]) = u32([fp + 22], [fp + 23]) U32Add u32([fp + 30], [fp + 31])
  18: 19 20 0 0 20         // u32([fp + 20], [fp + 21]) = u32([fp + 20], [fp + 21]) + u32(0, 0)
  19: 19 32 0 0 22         // u32([fp + 22], [fp + 23]) = u32([fp + 32], [fp + 33]) + u32(0, 0)
  20: 19 28 0 0 24         // u32([fp + 24], [fp + 25]) = u32([fp + 28], [fp + 29]) + u32(0, 0)
  21: 13 2147483635 _ _    // jump rel .loop_header_5
.L_6:
  22: 19 22 0 0 12         // u32([fp + 12], [fp + 13]) = u32([fp + 22], [fp + 23]) + u32(0, 0)
  23: 19 24 0 0 14         // u32([fp + 14], [fp + 15]) = u32([fp + 24], [fp + 25]) + u32(0, 0)
  24: 13 1 _ _             // jump rel .L_2
.L_2:
  25: 23 1 0 34            // u32([fp + 34], [fp + 35]) = u32(1)
  26: 15 6 34 36           // u32([fp + 36], [fp + 37]) = u32([fp + 6], [fp + 7]) U32Add u32([fp + 34], [fp + 35])
  27: 19 4 0 0 4           // u32([fp + 4], [fp + 5]) = u32([fp + 4], [fp + 5]) + u32(0, 0)
  28: 19 36 0 0 6          // u32([fp + 6], [fp + 7]) = u32([fp + 36], [fp + 37]) + u32(0, 0)
  29: 19 12 0 0 8          // u32([fp + 8], [fp + 9]) = u32([fp + 12], [fp + 13]) + u32(0, 0)
  30: 19 14 0 0 10         // u32([fp + 10], [fp + 11]) = u32([fp + 14], [fp + 15]) + u32(0, 0)
  31: 13 2147483609 _ _    // jump rel .loop_header_1
.L_3:
  32: 19 10 0 0 0          // u32([fp + 0], [fp + 1]) = u32([fp + 10], [fp + 11]) + u32(0, 0)
  33: 13 1 _ _             // jump rel .L_0
.L_0:
  34: 4 0 0 2147483643     // Return value 0 slot 0: [fp -4] = [fp + 0] + 0
  35: 4 1 0 2147483644     // Return value 0 slot 1: [fp -3] = [fp + 1] + 0
  36: 11 _ _ _             // return
