crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_simple_loop_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: simple_loop.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 0 (u32)
      %1 = %0 (u32)
      %2 = %0 (u32)
      %3 = %2 U32Add %1
      %4 = 1 (u32)
      %5 = %1 U32Add %4
      %6 = 3 (u32)
      %7 = %5 U32Neq %6
      %8 = %5 (u32)
      %9 = %3 (u32)
      if %7 then jump 0 else jump 2

    1:
      jump 3

    2:
      jump 3

    3:
      %10 = %3 (u32)
      return %10

    4:
      unreachable

  }

}
